# chess-engine

./: CNAME  README.md  index.html  pyproject.toml
src/: board.py  evaluation.py  main.py  minimax.py  move_generation.py  pieces.py  rules.py
tests/: test_board.py  test_evaluation.py  test_minimax.py  test_move_generation.py  test_rules.py
